--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
         <div class="country-head">
           <h2>WE DELIVER TO</h2>
         </div>
-        <h3>Delhi</h3>
-        <h3>Mumbai</h3>
-        <h3>Patna</h3>
-        <h3>Thane</h3>
-        <h3>Kolkata</h3>
-        <h3>Dombivli</h3>
-        <h3>Kalva</h3>
-        <h3>GhatKoper</h3>
-        <h3>CSMT</h3>
+        <h3>Andheri</h3>
+        <h3>Kalyan</h3>
+        <h3>Badlapur</h3>
+        <h3>Mumbra</h3>
+        <h3>Bhandup</h3>
+        <h3>Byculla</h3>
+        <h3>Pune</h3>
+        <h3>Marine Lines</h3>
+        <h3>Fort</h3>
       </div>
       <div class="country-col2">
         <h3>Delhi</h3>
