--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         <h3>Swiggy Corporate</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
+        <h3>Swiggy Genie12</h3>
+        <h3>Swiggy Genie13</h3>
+        <h3>Swiggy Genie14</h3>
+        
       </div>
       <div class="column-2">
         <div class="heading">
