--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h3>Careers</h3>
         <h3>Swiggy Blog</h3>
         <h3>Bug Bounty</h3>
-        <h3>Swiggy One</h3>
+        <h3>Swiggy Two</h3>
         <h3>Swiggy Corporate</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
