--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="info">
           <div class="headings">
             <h1>Hungry</h1>
-            <h2>Order food from favourite restaurants near you.</h2>
+            <h2>Order food from favourite restaurants near you. Enjoy</h2>
           </div>
           <div class="input-data flex">
             <input type="text" placeholder="Enter your delivery location">
@@ -87,7 +87,7 @@
         <div class="heading">
           <h2>COMPANY</h2>
         </div>
-        <h3>About us</h3>
+        <h3>About us Raj</h3>
         <h3>Teams</h3>
         <h3>Careers</h3>
         <h3>Swiggy Blog</h3>
