--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h3>Swiggy Corporate</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
-        <h3>Swiggy five</h3>
+        <h3>Swiggy seven</h3>
       </div>
       <div class="column-2">
         <div class="heading">
