--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <section class="info">
           <div class="headings">
-            <h1>Hungry</h1>
+            <h1>Really Hungry</h1>
             <h2>Order food from favourite restaurants near you. Enjoy</h2>
           </div>
           <div class="input-data flex">
