--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="heading">
           <h2>LEGAL</h2>
         </div>
-        <h3>Terms & Conditions</h3>
+        <h3>Terms & Conditions apply</h3>
         <h3>Refund & Cancellation</h3>
         <h3>Privacy Policy</h3>
         <h3>Cookie Policy</h3>
