--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         </div>
         <h3>About us Raj</h3>
         <h3>Teams</h3>
-        <h3>Careers</h3>
-        <h3>Swiggy Blog</h3>
+        <h3>Careers 12</h3>
+        <h3>Swiggy Blog 14</h3>
         <h3>Bug Bounty</h3>
         <h3>Swiggy Two</h3>
         <h3>Swiggy Corporate</h3>
