--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         </div>
         <h3>About us Raj</h3>
         <h3>Teams</h3>
+        <h3>Teams 12</h3>
+        <h3>Teams 14</h3>
+        
         <h3>Careers</h3>
         <h3>Swiggy Blog</h3>
         <h3>Bug Bounty</h3>
