--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="info">
           <div class="headings">
             <h1>Hungry</h1>
-            <h2>Order food from favourite restaurants near you. Enjoy</h2>
+            <h2>Order food from favourite restaurants near you.</h2>
           </div>
           <div class="input-data flex">
             <input type="text" placeholder="Enter your delivery location">
@@ -63,7 +63,7 @@
     </section>
     <div class="container-3 flex">
       <section class="left-sec">
-        <div class="info-sec ">
+        <div class="inf-sec ">
           <h1>
             Restaurants in <br>your pocket
           </h1>
@@ -87,23 +87,15 @@
         <div class="heading">
           <h2>COMPANY</h2>
         </div>
-        <h3>About us Raj</h3>
+        <h3>About us</h3>
         <h3>Teams</h3>
         <h3>Careers</h3>
         <h3>Swiggy Blog</h3>
         <h3>Bug Bounty</h3>
-        <h3>Swiggy Two</h3>
+        <h3>Swiggy One</h3>
         <h3>Swiggy Corporate</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
-<<<<<<< HEAD
-        <h3>Swiggy seven</h3>
-=======
-        <h3>Swiggy Genie12</h3>
-        <h3>Swiggy Genie13</h3>
-        <h3>Swiggy Genie14</h3>
-        
->>>>>>> 18983e72dd4908c86111df965906aaee621a4c1e
       </div>
       <div class="column-2">
         <div class="heading">
@@ -137,15 +129,15 @@
         <div class="country-head">
           <h2>WE DELIVER TO</h2>
         </div>
-        <h3>Andheri</h3>
-        <h3>Kalyan</h3>
-        <h3>Badlapur</h3>
-        <h3>Mumbra</h3>
-        <h3>Bhandup</h3>
-        <h3>Byculla</h3>
-        <h3>Pune</h3>
-        <h3>Marine Lines</h3>
-        <h3>Fort</h3>
+        <h3>Delhi</h3>
+        <h3>Mumbai</h3>
+        <h3>Patna</h3>
+        <h3>Thane</h3>
+        <h3>Kolkata</h3>
+        <h3>Dombivli</h3>
+        <h3>Kalva</h3>
+        <h3>GhatKoper</h3>
+        <h3>CSMT</h3>
       </div>
       <div class="country-col2">
         <h3>Delhi</h3>
