--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h3>Swiggy Corporate</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
-        <h3>Swiggy seven</h3>
+        <h3>Swiggy eleven</h3>
       </div>
       <div class="column-2">
         <div class="heading">
