--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
         <h3>Kalva</h3>
         <h3>GhatKoper</h3>
         <h3>CSMT</h3>
+        <h3>Delhi</h3>
+        <h3>Mumbai</h3>
+        <h3>Patna</h3>
+        <h3>Thane</h3>
+        <h3>Kolkata</h3>
+        <h3>Dombivli</h3>
+        <h3>Kalva</h3>
+        <h3>GhatKoper</h3>
+        <h3>CSMT</h3>
+
       </div>
       <div class="country-col4">
         <h3>Delhi</h3>
