--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="left-sec">
         <div class="inf-sec ">
           <h1>
-            Restaurants in <br>your pocket
+            Restaurants in the gaaa<br>your pocket
           </h1>
           <p>
             Order from your favorite restaurants & track <br>on the go, with the all-new Swiggy app.
