--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <h3>Teams 12</h3>
         <h3>Teams 14</h3>
         
-        <h3>Careers</h3>
+        <h3>Careers guys</h3>
         <h3>Swiggy Blog no 1</h3>
-        <h3>Bug Bounty</h3>
-        <h3>Swiggy One</h3>
+        <h3>Bug Bounty man</h3>
+        <h3>Swiggy One three</h3>
         <h3>Swiggy Corporatedddddd</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
