--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h3>Swiggy Genie</h3>
         <h3>Swiggy seven</h3>
         <h3>Swiggy eleven</h3>
-        <h1>Sakshi</h1>
+        <h1>Sakshi sapkale</h1>
       </div>
       <div class="column-2">
         <div class="heading">
