--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>POPULAR CITIES IN INDIA</h3>
             <h4>Ahmedabad &nbsp Bangalore &nbsp Chennai &nbsp Delhi &nbsp
               Gurgaon
-              &nbsp Hyderabad hello asd world &nbsp Kolkata &nbsp Mumbai&nbsp <br>Pune& more.</h4>
+              &nbsp Hyderabad &nbsp Kolkata &nbsp Mumbai&nbsp <br>Pune& more.</h4>
           </div>
         </section>
       </div>
@@ -96,16 +96,15 @@
         <h3>Teams 12</h3>
         <h3>Teams 14</h3>
         
-        <h3>Careers guys</h3>
+        <h3>Careers</h3>
         <h3>Swiggy Blog no 1</h3>
-        <h3>Bug Bounty man</h3>
-        <h3>Swiggy One three</h3>
+        <h3>Bug Bounty</h3>
+        <h3>Swiggy One</h3>
         <h3>Swiggy Corporatedddddd</h3>
         <h3>Swiggy Instamart</h3>
         <h3>Swiggy Genie</h3>
         <h3>Swiggy seven</h3>
         <h3>Swiggy eleven</h3>
-        <h1>Sakshi sapkale</h1>
       </div>
       <div class="column-2">
         <div class="heading">
