blake blake blake

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>POPULAR CITIES IN INDIA</h3>
             <h4>Ahmedabad &nbsp Bangalore &nbsp Chennai &nbsp Delhi &nbsp
               Gurgaon
-              &nbsp Hyderabad &nbsp Kolkata &nbsp Mumbai&nbsp <br>Pune& more.</h4>
+              &nbsp Hyderabad Mumbra &nbsp Kolkata &nbsp Mumbai&nbsp <br>Pune& more.</h4>
           </div>
         </section>
       </div>
